--- a/index.html
+++ b/index.html
@@ -24,6 +24,45 @@
     <title>Beats Headphones</title>
   </head>
   <body>
+    <!--=============== HEADER ===============-->
+    <header class="header" id="header">
+      <!-- ========== MARQUEE HEADER TEXT ============ -->
+      <marquee behavior="scroll" direction="left"
+        ><h3 class="marquee__title">Beats Headphones</h3></marquee
+      >
+
+      <nav class="nav container">
+        <a href="#" class="nav__logo">
+          <img src="assets/img/logo.png" alt="" />MARU
+        </a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link active-link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="#specs" class="nav__link">Specs</a>
+            </li>
+            <li class="nav__item">
+              <a href="#case" class="nav__link">Case</a>
+            </li>
+            <li class="nav__item">
+              <a href="#products" class="nav__link">Products</a>
+            </li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-line"></i>
+          </div>
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-function-line"></i>
+        </div>
+      </nav>
+    </header>
+
     <!--=============== SCROLL REVEAL ===============-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
