--- a/index.html
+++ b/index.html
@@ -165,6 +165,28 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- ================= CASE ================ -->
+			<section class="case section" id="case">
+				<h2 class="section__title section__title-gradient">Case</h2>
+
+				<div class="case__container container grid">
+					<div>
+						<img class="case__img" src="assets/img/case.png" alt="case image" />
+					</div>
+
+					<div class="case__data">
+						<p class="case__description">
+							With a comfortable and adaptable case so that you can store it
+							whenever you want, and keep your durability forever.
+						</p>
+
+						<a href="#" class="button button--flex">
+							<i class="ri-information-line button__icon"></i> More info
+						</a>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<!--=============== SCROLL REVEAL ===============-->
