--- a/index.html
+++ b/index.html
@@ -187,6 +187,28 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- ============== DISCOUNT ============== -->
+			<section class="discount section" id="discount">
+				<div class="discount__container container grid">
+					<div class="discount__animate">
+						<h2 class="discount__title">
+							Immerse yourself in <br />
+							your music
+						</h2>
+						<p class="discount__description">Get it now, up to 50% off.</p>
+						<a href="#" class="button button--flex">
+							<i class="ri-shopping-bag-line button__icon"></i> Shop Now
+						</a>
+					</div>
+
+					<img
+						src="assets/img/discount.png"
+						alt="discount image"
+						class="discount__img"
+					/>
+				</div>
+			</section>
 		</main>
 
 		<!--=============== SCROLL REVEAL ===============-->
