--- a/index.html
+++ b/index.html
@@ -209,6 +209,84 @@
 					/>
 				</div>
 			</section>
+
+			<!-- ================= PRODUCTS ================ -->
+			<section class="product section" id="product">
+				<h2 class="section__title section__title-gradient">
+					Choose Your Style
+				</h2>
+
+				<div class="product__container container grid">
+					<article class="products__card">
+						<div class="products__content">
+							<img
+								src="/assets/img/product1.png"
+								alt="product image"
+								class="products__img"
+							/>
+
+							<h2 class="products__title">Black</h2>
+							<span class="products__price">$249</span>
+
+							<button class="button button--flex products__button">
+								<i class="ri-shopping-bag-line button__icon"></i>
+							</button>
+						</div>
+					</article>
+
+					<article class="products__card">
+						<div class="products__content">
+							<img src="assets/img/product2.png" alt="" class="products__img" />
+
+							<h3 class="products__title">Red Black</h3>
+							<span class="products__price">$249</span>
+
+							<button class="button button--flex products__button">
+								<i class="ri-shopping-bag-line button__icon"></i>
+							</button>
+						</div>
+					</article>
+
+					<article class="products__card">
+						<div class="products__content">
+							<img src="assets/img/product3.png" alt="" class="products__img" />
+
+							<h3 class="products__title">Night Black</h3>
+							<span class="products__price">$249</span>
+
+							<button class="button button--flex products__button">
+								<i class="ri-shopping-bag-line button__icon"></i>
+							</button>
+						</div>
+					</article>
+
+					<article class="products__card">
+						<div class="products__content">
+							<img src="assets/img/product4.png" alt="" class="products__img" />
+
+							<h3 class="products__title">Blue</h3>
+							<span class="products__price">$249</span>
+
+							<button class="button button--flex products__button">
+								<i class="ri-shopping-bag-line button__icon"></i>
+							</button>
+						</div>
+					</article>
+
+					<article class="products__card">
+						<div class="products__content">
+							<img src="assets/img/product5.png" alt="" class="products__img" />
+
+							<h3 class="products__title">Twilight gray</h3>
+							<span class="products__price">$249</span>
+
+							<button class="button button--flex products__button">
+								<i class="ri-shopping-bag-line button__icon"></i>
+							</button>
+						</div>
+					</article>
+				</div>
+			</section>
 		</main>
 
 		<!--=============== SCROLL REVEAL ===============-->
